# Knowledge_Chipper

./: .bandit  .cache_state.json  .cursor_shell_config  .cursorules  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  6_DIMENSION_IMPLEMENTATION_COMPLETE.md  ACTIVE_TODOS.md  ALL_28_TODOS_COMPLETE.md  ALL_BUGS_IDENTIFIED.md  ALL_FIXES_COMPLETE.md  ALL_IMPLEMENTATION_COMPLETE.md  ALL_TODOS_COMPLETE.md  ALL_TRANSCRIPTION_FIXES_COMPLETE.md  ANSWER_TO_YOUR_QUESTION.md  ANTI_BOT_CRITICAL_FIXES.md  APPLE_CODE_SIGNING_COMPLETE_SETUP.md  APPLE_SIGNING_SETUP.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_WEB_CANONICAL.md  ARCHIVE_VALIDATION_FIX.md  ASYNCIO_EVENT_LOOP_FIX.md  AUTOMATED_TESTING_QUICKSTART.md  AUTOMATED_TESTING_README.txt  AUTOMATED_TESTING_SUCCESS.md  AUTOMATED_TESTING_SUMMARY.md  AUTO_SCROLL_FIX_SUMMARY.md  AUTO_SYNC_IMPLEMENTATION_COMPLETE.md  BATCH_7000_M2_ULTRA_128GB_OPTIMIZED.md  BATCH_7000_VIDEOS_QUICK_REFERENCE.md  BATCH_PROCESSING_7000_VIDEOS_ANALYSIS.md  BATCH_PROCESSING_CLEANUP_SUMMARY.md  BETTER_LOGGING_IMPLEMENTATION.md  BRIGHT_DATA_MIGRATION_TODO.md  BRIGHT_DATA_OBSOLETE_CODE_PROBLEM.md  BUG_ANALYSIS.md  BUG_FIXES_JAN_2_2026.md  (+537 more)
.claude/: settings.local.json
.git_backup_20250807_185718/: AUTO_MERGE  COMMIT_EDITMSG  config  cursor_metadata.pb  index  packed-refs
.github/: dependabot.yml  pull_request_template.md
.obsidian/: workspace.json
Prompts/: Summary Prompt.md  inkbot-chunked-summary.txt  inkbot-summary-of-summaries.txt
_deprecated/: LAYER_CAKE_POLISH_COMPLETE.md  README.md  test_voice_fingerprinting_stage2.py
build_packages/: SkipThePodcast.pkgproj
config/: Headers_to_YAML.txt  README.md  apple_signing_credentials.example  bright_data_setup.md  channel_hosts.csv  credentials.example.yaml  disable_youtube_delays.yaml  dropdown_options.txt  obsidian_linking.yaml  packetstream.example.yaml  proxy.example.yaml  settings.example.yaml  settings.yaml.backup.20251024_195607  speaker_attribution.yaml  webshare_proxy_setup.md  youtube_oauth2_credentials.json.example  youtube_scraper.yaml
daemon/: DATABASE_VIEWER.md  QUICKSTART.md  __init__.py  __main__.py  app_factory.py  main.py
data/: TODO_HCE_Summarization_Upgrades.md  interjections.txt
docs/: ADVANCED_VOICE_FINGERPRINTING.md  ALL_TIMESTAMPS_IMPLEMENTATION.md  API_ENTRY_POINTS.md  APPLE_FORUM_POST.md  APPLE_SUPPORT_REPLY.md  APPLE_SUPPORT_REQUEST.md  APP_UPDATE_ARCHITECTURE_RECOMMENDATION.md  ARCHITECTURE_UNIFIED.md  AUDIO_ONLY_FORMAT_FINAL_SOLUTION.md  AUDIO_ONLY_FORMAT_FIX_FINAL.md  AUDIO_PROCESSOR_RECOVERY.md  AUTOMATED_TESTING_GUIDE.md  AUTOMATIC_COOKIE_DETECTION.md  AUTO_UPDATE_SETTING_SUMMARY.md  BATCH_PROCESSING_INTEGRATION.md  BRIGHT_DATA_ACCESS_LIMITATIONS.md  BUGS_FIXED.md  BUILD_DATE_AUTOMATION.md  BUILD_PROCESS.md  BUILD_SCRIPT_MACOS_INTEGRATION.md  CHANNEL_CONTEXT_EXAMPLE.md  CHANNEL_ID_EXTRACTION_ENHANCEMENT.md  CHANNEL_SPEAKER_MAPPINGS.md  CLARIFICATIONS_ON_ARCHITECTURE.md  CLEANUP_COMPLETE_SUMMARY.md  CLUSTERING_QUALITY_ANALYSIS.md  CONVEYOR_BELT_BOTTLENECK_ANALYSIS.md  COOKIE_FILES_PERSISTENCE_FIX.md  COOKIE_PERSISTENCE_AND_FORMAT_FIX_2025.md  COOKIE_PERSISTENCE_FIX.md  COOKIE_PROXY_WIRING_FIX.md  DAEMON_AUTO_UPDATE_IMPLEMENTATION.md  DAEMON_RELEASE_PROCESS.md  DATABASE_CENTRIC_ARCHITECTURE.md  DATABASE_PATTERNS.md  DATABASE_RECORD_DUPLICATION_AUDIT.md  DATABASE_SERVICE_LIFECYCLE.md  DEPENDABOT_YTDLP_SETUP.md  DEPENDENCY_UPDATE_STRATEGY.md  DEVICE_ASSIGNMENT_STRATEGY.md  (+176 more)
examples/: README.md
github_models_prep/: README.md  models_manifest.json
hce_kit/: Makefile  Manifest.md  README.md  pyproject.toml
installer/: build_dmg.sh  build_pkg.sh  create_desktop_shortcut.sh  daemon.spec  install.sh  org.getreceipts.daemon.plist
knowledge_chipper_oauth/: README.md  __init__.py  getreceipts_auth.py  getreceipts_config.py  getreceipts_uploader.py  integration_example.py  requirements_oauth.txt
requirements/: README.md  base.txt  cuda.txt  development.txt  diarization.txt  gui.txt  hce.txt  production.txt
schemas/: README.md  flagship_input.v1.json  flagship_output.v1.json  flagship_output.v2.json  miner_input.v1.json  miner_output.v1.json  miner_output.v2.json  miner_output_flat.v1.json.bak
scripts/: CURSOR_TIMEOUT_PREVENTION.md  GATEKEEPER_FREE_INSTALLATION.md  INSTALL_AND_OPEN.command  REFACTOR_MG.md  add_domain_column_to_claims.py  add_rss_progress_indicators.py  add_source_id_to_yaml.py  add_subtitle_column.py  add_subtitle_column_standalone.py  apply_claims_first_migration.py  apply_minimal_schema_migration.py  auto-fix-test.sh  auto-test-fix.sh  benchmark_llm_extraction.py  build_complete_pkg.sh  build_macos_app.sh  build_macos_app_REPLACED.md  build_packages_installer.sh  build_pkg_installer.sh  build_pkg_installer_nosudo.sh  build_pkg_installer_simple.sh  build_python_framework.sh  build_signed_notarized_dmg.sh  build_signed_notarized_pkg.sh  build_signed_notarized_pkg_debug.sh  build_signed_notarized_zip.sh  build_simple_packages.sh  build_simple_python_framework.sh  bump_version.py  bundle_ai_models.sh  bundle_all_models.sh  bundle_deno.sh  bundle_ffmpeg.sh  bundle_ollama_models.sh  bundle_simple_ai_models.sh  check_database_status.sh  check_pacing_status.py  check_test_progress.sh  check_ytdlp_changelog.sh  cleanup_build.sh  (+184 more)
state/: application_state.json  application_state.json.backup
test-results/: analysis_prompt_1.txt  comprehensive_report_1.html  comprehensive_results_1.xml  gui-tests-fake.xml  gui-tests-real.xml
test_output/: failed_transcripts.csv
tests/: DIAGNOSTIC_OUTPUT_EXAMPLES.md  README.md  TIMEOUT_FIXES_GUIDE.md  __init__.py  comprehensive_test_suite.py  conftest.py  create_diarized_transcript.py  knowledge_chipper_integration.py  run_all_automated_tests.sh  run_all_tests.py  run_bright_data_tests.py  run_comprehensive_automated_tests.sh  run_hce_tests.py  run_working_tests.py  run_working_tests.sh  setup_diarization_token.py  test_audio_processor.py  test_auto_scroll_fix.py  test_base_processor.py  test_basic.py  test_batch_pipeline.py  test_batch_pipeline_e2e.py  test_bright_data_adapters.py  (+61 more)
(+1014 files in other folders)
